Add slider for year

--- a/style.css
+++ b/style.css
@@ -63,3 +63,26 @@ main .card .head h2{
 main .card .head .icon{
     font-size: 20px;
 }
+.bar-chart {
+	position: relative;
+}
+
+.slider {
+	position: absolute;
+	bottom: 30px;
+	width: 100%;
+	
+}
+input[type="range"] {
+	width: 60%;
+	margin-left: 110px;
+	display: block;
+}
+.year-text {
+	position: absolute;
+	top: 50%;
+	transform: translate(100%, -50%);
+	margin-left: 35px; 
+	font-size: 16px;
+	font-weight: bold;
+}
