--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ html {
     overflow-x: hidden;
 }
 body {
-    background: lightgray;
     overflow-x: hidden;
 }
 a {
@@ -27,6 +26,8 @@ main .title {
     margin-bottom: 10px;
 }
 .map-chart {
+    width: 900px;
+    height: 700px;
     background-color: grey;
 }
 
