--- a/style.css
+++ b/style.css
@@ -25,20 +25,40 @@ main .title {
     font-weight: 600;
     margin-bottom: 10px;
 }
-main .article{
-    font-size: 32px;
-    text-align: center;
-    font-weight: 700;
-    background-image: linear-gradient(to right, #A1C4FD, #C2E9FB);
+.navbar {
+    border-bottom: 2px solid #ddd;
+}
+.article {
+    background-color: #f8f9fa;
+    padding: 20px;
     margin-top: 20px;
-    color: rgb(255, 85, 46);
+    border: 1px solid #ddd;
+    border-radius: 8px;
+}
+.article p {
+    text-align: justify;
+    line-height: 1.6;
+    color: #333;
+}
+.article-image {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    margin-bottom: 10px;
 }
 .map-chart {
-    width: 900px;
-    height: 700px;
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
     background-color: grey;
 }
-
+.scatterContainer{
+    background-color: #e0e0e0;
+    padding: 20px;
+}
+.modal-body {
+    padding: 20px;
+}
 .tooltip,
 #scatter-tooltips {
     position: absolute;
